css: fixed to not stretch image vertically in a figure

--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -39,6 +39,7 @@
 
     & img {
       max-width: 100%; /* prevents the image to break out of the container */
+      height: auto; /* helps to maintain the aspect ratio */
     }
   }
 
